support Flask route & decorator